--- a/app/templates/a_propos.html
+++ b/app/templates/a_propos.html
@@ -10,5 +10,6 @@
 
     <h2>Détails techniques</h2>
     <p>Techniquement, SKILVIT ne fonctionne correctement qu'à l'heure française et qu'en français.</p>
+    <p>Venez rejoindre le développement de Skilvit sur <a href="https://github.com/skilvit/skilvit-web">github.com/skilvit/skilvit-web</a>.</p>
 
 {% endblock %}
