--- a/app/templates/mails/attente_validation_praticien.html
+++ b/app/templates/mails/attente_validation_praticien.html
@@ -12,4 +12,4 @@
     Si vous n'êtes pas l'initiateur de l'inscription à Skilvit ou si vous voulez arrêter l'inscription, vous pouvez annuler l'inscription en cliquant sur le lien suivant {{ link_to_dismiss }}
 </p>
 
-<p>L'équipe de Skilvit.</p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
