--- a/app/templates/mails/message_patient_vers_praticien.html
+++ b/app/templates/mails/message_patient_vers_praticien.html
@@ -1,7 +1,9 @@
-<p>Message envoyé par votre patient : {{ patient.prenom }} {{ patient.nom }}</p>
-
-<p>Si vous n'êtes pas {{ praticien.prenom }} {{ praticien.nom }}, veuillez ne pas tenir compte de ce message.</p>
-
+<p>Bonjour,</p>
+<p></p>
+<p>Ceci est un message automatique. Voici le message envoyé par votre patient : {{ patient.prenom }} {{ patient.nom }}</p>
+<p></p>
 <p>{{ corps }}</p>
-
-<p>Skilvit</p>
+<p></p>
+<p>Si vous n'êtes pas {{ praticien.prenom }} {{ praticien.nom }}, veuillez ne pas tenir compte de ce message.</p>
+<p></p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
