--- a/app/templates/mails/validation_praticien.html
+++ b/app/templates/mails/validation_praticien.html
@@ -10,8 +10,9 @@
     Nous avons accepté votre inscription.
     Afin de valider votre inscription, veuillez cliquer sur le lien suivant : {{ link_to_validate }}.
 </p>
+<p></p>
 <p>
     Si vous n'êtes pas l'initiateur de l'inscription à Skilvit, vous pouvez annuler l'inscription en cliquant sur le lien suivant {{ link_to_dismiss }}
 </p>
-
-<p>L'équipe de Skilvit.</p>
+<p></p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
