--- a/app/templates/motif_principal.html
+++ b/app/templates/motif_principal.html
@@ -79,7 +79,7 @@
 
 {#  </div>#}
   <footer>
-    Contact : skilvitapp@gmail.com
+    Un problème ? Contactez Clément Besnier clemsciences@aol.com
   </footer>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
