--- a/app/templates/page_inconnue.html
+++ b/app/templates/page_inconnue.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <p>
-        {{ _('La page que vous recherchez est incoonue. Revenez en arrière et réessayez. Si cela échoue, alors contactez le responsable du site.') }}
+        {{ _('La page que vous recherchez est inconnue. Revenez en arrière et réessayez. Si cela échoue, alors contactez le responsable du site.') }}
     </p>
         {{ super() }}
 
