--- a/app/templates/patient/interface_patient.html
+++ b/app/templates/patient/interface_patient.html
@@ -6,11 +6,12 @@
     </h2>
     <div id="menu_fiches_pour_patient">
         <form id="menu_action_pour_patients_form" method="POST">
-            <p><input type="submit" name="bouton_creer_nouvelle_entree" value="{{ _('Création nouvelle entrée') }}" class="btn btn-primary"></p>
+            <p><input type="submit" name="bouton_creer_nouvelle_entree" value="{{ _('Création nouvelle situation') }}" class="btn btn-primary"></p>
             <p><input type="submit" name="bouton_prise_medicament" value="{{ _('Créer nouvelle prise de médicament') }}" class="btn btn-primary"></p>
             <p><input type="submit" name="bouton_creer_fiche_repas" value="{{ _('Création nouvelle fiche repas') }}" class="btn btn-primary"></p>
             <p><input type="submit" name="bouton_creer_evenement_sommeil" value="{{ _('Création événement sommeil') }}" class="btn btn-primary"></p>
             <p><input type="submit" name="bouton_creation_activite_physique" value="{{ _('Création fiche activité physique') }}" class="btn btn-primary"></p>
+            <p><input type="submit" name="bouton_creation_masse" value="{{ _('Création fiche poids') }}" class="btn btn-primary"></p>
 
         </form>
     </div>
