--- a/app/templates/mails/connexion_praticien.html
+++ b/app/templates/mails/connexion_praticien.html
@@ -5,4 +5,4 @@
 <p></p>
 <p>Nous vous notifions que vous vous êtes connecté à Skilvit.</p>
 <p></p>
-<p>L'équipe de Skilvit.</p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
