--- a/app/templates/mails/message_praticien_vers_patient.html
+++ b/app/templates/mails/message_praticien_vers_patient.html
@@ -1,7 +1,9 @@
-<p>Message envoyé par votre praticien : {{ praticien.prenom }} {{ praticien.nom }}</p>
-
-<p>Si vous n'êtes pas {{ patient.prenom }} {{ patient.nom }}, veuillez ne pas tenir compte de ce message.</p>
-
+<p>Bonjour,</p>
+<p></p>
+<p>Ce message est un message automatique. Voici le message envoyé par votre praticien : {{ praticien.prenom }} {{ praticien.nom }}</p>
+<p></p>
 <p>{{ corps }}</p>
-
-<p>Skilvit</p>
+<p></p>
+<p>Si vous n'êtes pas {{ patient.prenom }} {{ patient.nom }}, veuillez ne pas tenir compte de ce message.</p>
+<p></p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
