--- a/app/templates/mails/validation_patient.html
+++ b/app/templates/mails/validation_patient.html
@@ -1,16 +1,12 @@
-
-
-
-
-
 <p>Bonjour {{ user.prenom }} {{ user.nom }}</p>
 <p></p>
 <p>
     Vous nous avez fait part de votre intention de rejoindre Skilvit pour l'utiliser dans votre thérapie cognitivo-comportementale.
     Afin de valider votre inscription, veuillez cliquer sur le lien suivant : {{ link_to_validate }}.
 </p>
+<p></p>
 <p>
     Si vous n'êtes pas l'initiateur de l'inscription à Skilvit, vous pouvez annuler l'inscription en cliquant sur le lien suivant {{ link_to_dismiss }}
 </p>
-
-<p>L'équipe de Skilvit.</p>
+<p></p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
