--- a/app/templates/mails/validé_patient.html
+++ b/app/templates/mails/validé_patient.html
@@ -9,4 +9,4 @@
     Votre compte a été validé ! Vous pouvez dorénavant vous connecter à Skilvit.
 </p>
 <p></p>
-<p>L'équipe de Skilvit.</p>
+<p>Skilvit, <a href="https://www.skilvit.fr">skilvit.fr</a>.</p>
