--- a/app/templates/motif_principal_bs.html
+++ b/app/templates/motif_principal_bs.html
@@ -67,12 +67,6 @@
                             <li class="nav-item active" >
                                 <a class="nav-link" href="{{ url_for('main.connecter_patient') }}">{{ _('Patient') }}</a>
                             </li>
-{#                            <li class="nav-item active" >#}
-{#                                <a class="nav-link" href="{{ url_for('main.creer_nouveau_praticien') }}">{{ _('Nouveau praticien') }}</a>#}
-{#                            </li>#}
-{#                            <li class="nav-item active" >#}
-{#                                <a class="nav-link" href="{{ url_for('main.creer_nouveau_patient') }}">{{ _("Nouveau patient") }}</a>#}
-{#                            </li>#}
                         {% endif %}
                         <li class="nav-item active" >
                             <a class="nav-link" href="{{ url_for('main.a_propos') }}">{{ _("À propos") }}</a>
@@ -101,18 +95,17 @@
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <div id="flash-message" class="alert alert-info alert-dismissible fade show" role="alert"
-                     style="display: none; position: absolute; left: 0; width: 100%;
-                     list-style-type: square;">
-                    <div style="padding-bottom: 10px;">
+                     style="display: none; position: absolute; left: 0; width: 100%; z-index: 999;">
+                    <div > {# style="padding-bottom: 10px;" #}
                         {% for message in messages %}
-                            <p>
-                                {{ message }}
-                            </p>
+
+                            <p>{{ message }}</p>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         {% endfor %}
                     </div>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+
                 </div>
             {% endif %}
         {% endwith %}
@@ -123,9 +116,6 @@
         <div class="container">
         {% block content %}
             {{ super() }}
-            <form method="post" action="/">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-            </form>
         {% endblock %}
 
         </div>
@@ -134,17 +124,13 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/flash.js') }}"></script>
-<!--    <script type="text/javascript" src="{{ url_for('static', filename='js/moment-with-locales.min.js') }}"></script>-->
-<!--    <script type="text/javascript" src="{{ url_for('static', filename='js/moment-timezone-with-data.min.js') }}"></script>-->
-
     <script type="text/javascript" src="{{ url_for('static', filename='js/tempusdominus-bootstrap-4.min.js') }}"></script>
-<!--             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>-->
 
     {% block scripts %}
 {#        {{ super() }}#}
     {% endblock %}
     {% block footer %}
-        <footer>Contact : skilvitapp@gmail.com</footer>
+        <footer>Contact : admin@skilvit.fr</footer>
     {% endblock %}
 
 {% endblock %}
