--- a/app/templates/patient/profil/mon_identite.html
+++ b/app/templates/patient/profil/mon_identite.html
@@ -1,4 +1,5 @@
 {% extends "motif_principal_bs.html" %}
+{% from "macros/profile/compte.html" import bouton_supprimer_compte %}
 
 {% block content %}
 
@@ -7,7 +8,9 @@
     <p>{{ _('Sexe : ') }}{{ patient.sexe.name }}</p>
     <p>{{ _('Adresse email : ') }}{{ patient.email}}</p>
 
-    <a href="{{ url_for("main.creer_et_voir_anamnese") }}"><button class="btn btn-secondary">{{ _('Anamnèse') }}</button></a>
+    <a href='{{ url_for("main.creer_et_voir_anamnese") }}'><button class="btn btn-secondary">{{ _('Anamnèse') }}</button></a>
+
+    {{ bouton_supprimer_compte(url_for("main.supprimer_profil_patient")) }}
 
     {{ super() }}
 {% endblock %}
