--- a/app/templates/praticien/profil/mon_identite.html
+++ b/app/templates/praticien/profil/mon_identite.html
@@ -1,4 +1,5 @@
 {% extends "motif_principal_bs.html" %}
+{% from "macros/profile/compte.html" import bouton_supprimer_compte %}
 
 {% block content %}
     <div class="col-8">
@@ -9,9 +10,8 @@
 
         <p><a href="{{ url_for('main.recuperer_mes_donnees_praticien') }}"><button class="btn btn-primary">{{ _('Récupérer toutes mes données') }}</button></a></p>
 
+        {{ bouton_supprimer_compte(url_for("main.supprimer_compte_praticien")) }}
 
-        <h5>{{ _('Suppression du compte') }}</h5>
-        <p><a href="{{ url_for('main.supprimer_compte_praticien') }}"><button class="btn btn-primary">{{ _('Supprimer le compte') }}</button></a></p>
         {{ super() }}
     </div>
 
